# ChangeLog for app-office/lyx
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.163 2009/01/09 18:37:26 josejx Exp $

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> lyx-1.6.0.ebuild,
  lyx-1.6.1.ebuild:
  Marked ~ppc for bug #246285.

  23 Dec 2008; Raúl Porcel <armin76@gentoo.org> lyx-1.5.7.ebuild:
  alpha/ia64/sparc stable wrt #250950

  17 Dec 2008; Markus Meier <maekke@gentoo.org> lyx-1.5.7.ebuild:
  amd64/x86 stable, bug #250950

  15 Dec 2008; Joseph Jezak <josejx@gentoo.org> lyx-1.5.7.ebuild:
  Marked ppc/ppc64 stable for bug #250950.

  15 Dec 2008; Jeroen Roovers <jer@gentoo.org> lyx-1.5.7.ebuild:
  Stable for HPPA (bug #250950).

  14 Dec 2008; Alexis Ballier <aballier@gentoo.org> -lyx-1.5.6.ebuild:
  remove old

*lyx-1.6.1 (14 Dec 2008)

  14 Dec 2008; Alexis Ballier <aballier@gentoo.org> +lyx-1.6.1.ebuild:
  version bump, thanks Pavel

*lyx-1.5.7 (14 Nov 2008)

  14 Nov 2008; Alexis Ballier <aballier@gentoo.org> +lyx-1.5.7.ebuild:
  bump lyx 1.5, thanks Pavel

  13 Nov 2008; Brent Baude <ranger@gentoo.org> lyx-1.6.0.ebuild:
  keyworded ~arch for ppc64, bug 246285

  10 Nov 2008; Alexis Ballier <aballier@gentoo.org> lyx-1.6.0.ebuild:
  Drop ppc and ppc64 keywords (bug #246285) in order to unmask 1.6.0

  10 Nov 2008; Alexis Ballier <aballier@gentoo.org> -lyx-1.6.0_rc3.ebuild,
  -lyx-1.6.0_rc4.ebuild, -lyx-1.6.0_rc5.ebuild:
  remove 1.6 release candidates

*lyx-1.6.0 (10 Nov 2008)

  10 Nov 2008; Alexis Ballier <aballier@gentoo.org> +lyx-1.6.0.ebuild:
  Bump to 1.6.0 final, thanks Pavel

  29 Oct 2008; Alexis Ballier <aballier@gentoo.org> lyx-1.5.5.ebuild,
  lyx-1.5.6.ebuild, lyx-1.6.0_rc3.ebuild, lyx-1.6.0_rc4.ebuild,
  lyx-1.6.0_rc5.ebuild:
  Add QT4_BUILT_WITH_USE_CHECK for bug #189925

  29 Oct 2008; Alexis Ballier <aballier@gentoo.org> lyx-1.5.5.ebuild,
  lyx-1.5.6.ebuild:
  Add missing pkgconfig dep, bug #239736

*lyx-1.6.0_rc5 (29 Oct 2008)
