@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gnome-mime-application-x-lyx.png 3302 RMD160 6b59808311d032c201961c0b085e13e2aae86bef SHA1 ccc71e9f98cfd6f6efbf550572eec89506d08349 SHA256 d0d16c7a835cbb8f15ea79efd27128a9c633ac56cdc06365449f389b21a0abce
 AUX lyx-1.4.4-gentoo.patch 1989 RMD160 4e52996232d9eda92df145f719b7ba891803b80b SHA1 2e6757f7d50f779d7ac65e0419073d7370508232 SHA256 4fbcaca88c2965821deaa70f61e75ff752ad34e50744d4e908f94bc29b85c553
 AUX lyx-1.5.0-gentoo.patch 1298 RMD160 69b7ce68234e7f5c2fee708944267f1974aa10d0 SHA1 16c3e6f846c55c3eb5fd9d7da1247a3429efa7a4 SHA256 36be1ea2577cce270319a7a3b4bed92e5925c0e974edda8729bda2179ac8ffe2
@@ -10,11 +13,20 @@ DIST lyx-1.5.5.tar.bz2 9082787 RMD160 d02147398bafc2ba4641d3206ef863f89655cae6 S
 DIST lyx-1.5.7.tar.bz2 9454238 RMD160 9e0736366f09f88a5623dbace8cafa3fda871af2 SHA1 442e7e20a0eb9b5855d5ac3915d13e5b92976c78 SHA256 935cc3f7a099eba4e4a7296d79fe5102fb7ef2de20ab2b6164347fef8c70dba4
 DIST lyx-1.6.0.tar.bz2 10334577 RMD160 8e4ee72b9c677d362a8a2dd49f316530b43a9533 SHA1 55720b9e82dc1c14882a23a3e6ea085d795cb6d3 SHA256 09c7d16d674f0b12215f447d7a2547414cde2a03bced9e3edfde1cf57cc9176c
 DIST lyx-1.6.1.tar.bz2 10263789 RMD160 c1f047daa2bcbb17ec8fdcf863b9ba9dff1df18e SHA1 c630b144837ac57d9acc0004b87512e3c7c798d5 SHA256 8f45da9653fc9ea927f3b8c7c96390fc8277d7c969b735a7b615c06e4e5c03d7
+DIST lyx-1.6.2.tar.bz2 10477093 RMD160 74e226963cf3124af3b0688ca44309f73962d81e SHA1 d5aee8dbc80df69d5cf0ca4d2dcb9aa5b1df3b16 SHA256 8515115b21ff78f4aff67bb185ddff76a42337063221a7b457f65340135864cc
 DIST preferences 1669 RMD160 26986d7bcc48c4ecf60f84d95490148a5e171785 SHA1 3567ad4d4a2a041c295e40fef76ca53de6cb260d SHA256 41867ac67bc729d1057253bf305aced1ff666ee4d648dfefc99fd0c3c0501d43
 EBUILD lyx-1.4.4.ebuild 4435 RMD160 60cad06d90687bb0295cda4882b760787c524206 SHA1 352b25234233c4a251e57dd5bcd30eb124017c74 SHA256 76bc2068e86a798cf939ab03da88bb49c39acc7091039e6d450de2dcb2de2122
 EBUILD lyx-1.5.5.ebuild 3485 RMD160 68b47c57af275de2a543b944b1740fb562ec5a35 SHA1 d11bc63c42ab924498b03188d3f18c56733d0e51 SHA256 4a82d04d854cb59bb256950b444a27723ce311deb083b3325c49f45b7dee13c1
 EBUILD lyx-1.5.7.ebuild 3428 RMD160 e9f6f5830c5755802d5b2c6e2af519fd166d1efd SHA1 c73bd81292f864fb8f38dc4ad9714a9ebbebb390 SHA256 13cd69c7d4148f83aa9173ebbee33bec045ad9e285d9cd7f7f73505f11e4d05b
 EBUILD lyx-1.6.0.ebuild 3797 RMD160 9e73eedb9a89d56c4e0a8864938f06cab85175b0 SHA1 4613d89aeeaaeaaa5442af6375406b9d428a04a1 SHA256 a643a12384f73bc392f5946892ff7a4e13ef689ef7aa5800f14b2ca08b5918d6
 EBUILD lyx-1.6.1.ebuild 4012 RMD160 9cabad9a1f89650ce73800b9824964783762f7c5 SHA1 485d11587e38e72e5a397d53246243d78ce2f0a7 SHA256 9515a99fd278b21b25e4d3f73a515610bbdfc357f626bd74f0c07cea7b8da3dc
-MISC ChangeLog 23761 RMD160 681ce4fa003eeac75b7cffe93dbacd75f22eb48a SHA1 8f0a7927e89c8151d3011f4b660c5957b6b3dd70 SHA256 e6275ab7fa2dd8b4b977aca1218b6f3b06342f4d9411a1401ab881d34a0f6da3
-MISC metadata.xml 764 RMD160 0d85c210de871f0e5d21ee434cdb15a133a28714 SHA1 480f22ce5bba78fb37100f32f227c75e26c6e481 SHA256 e99d908356e7e70def47d62c82e47884b55fd37217f5d7a0c6d2a175f0ceddab
+EBUILD lyx-1.6.2.ebuild 4122 RMD160 1dca8e58e3a5bfb8748c78eb7371084fc5f1a114 SHA1 a7faa5512c9937cc1493a0046ab6ef99fac03f56 SHA256 d7a2ce4c0d38b6001b6233929b261073d3a52a846fc813e94d2ab8142d696254
+MISC ChangeLog 23906 RMD160 f70b3a3a4644623b49eff476a4e1c3fc2c574c7a SHA1 8d11a2f96785a2c06eb3aaf1c4529165c0ce25e3 SHA256 28ee2666fb3ec266e8db34a2de6b234201405743483102a35009d7013c6b34e5
+MISC metadata.xml 843 RMD160 3b859ce16770bdad79af13f271d3674ff1f7ff7a SHA1 8d3eb51edb6cb0e6c45fda6d66a03f537153328a SHA256 7c31983022e0f6bec530ecaee420b690041317450220a654abfaaa18738b464e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAknJ2KcACgkQvFcC4BYPU0qTdQCfcU7WacFdr6TgnzB293OSjgrv
+TbwAoJvVRe/IVY86Or3AtzIA9xAW3Qf3
+=1jRs
+-----END PGP SIGNATURE-----
