@@ -1,6 +1,12 @@
 # ChangeLog for app-office/lyx
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.163 2009/01/09 18:37:26 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.164 2009/03/25 07:09:19 aballier Exp $
+
+*lyx-1.6.2 (25 Mar 2009)
+
+  25 Mar 2009; Alexis Ballier <aballier@gentoo.org> metadata.xml,
+  +lyx-1.6.2.ebuild:
+  version bump, thanks Pavel
 
   09 Jan 2009; Joseph Jezak <josejx@gentoo.org> lyx-1.6.0.ebuild,
   lyx-1.6.1.ebuild:
